[package]
name = "orbit-backend"
version = "0.1.0"
edition = "2024"


[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.5", features = ["cors"] }
walkdir = "2.4"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde_json = "1.0"
