[package]
name = "orbit-web-demo"
version = "0.1.0"
edition = "2024"

[dependencies]
yew = { version = "0.21", features = ["csr"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
gloo-timers = "0.3"
gloo-net = "0.3" # YENİ: Backend'e HTTP isteği atmak için
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"



[dependencies.web-sys]
version = "0.3"
features = [
    "HtmlInputElement",
    "FileList",
    "File",
    "Blob",
    "Event",
    "EventTarget",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "ImageData",
    "MouseEvent" # <--- BUNU EKLEDİK
]



